--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <ol>
 		
 		<li><b>har ki pauri</b</li>
-		<li><b>mata mansa devi mandir</li>
+		<li><b>mata mansa devi mandir</b</li>
 		<li><b>pawan dham</b</li>
 		<li><b>sapat rishi aasram</b</li>
 		<li><b>sahanti kunj gaytri pariwar</b</li>
