--- a/main.html
+++ b/main.html
@@ -23,11 +23,11 @@
 	
 	</ol>
 	<ul>
-		<li><b>samosa</b></li>
-		<li><b>chole-bhathure</b></li>
-		<li><b>litti-chokha</b></li>
-		<li><b>puri sabzi</b></li>
-		<li><b>rice curry</b></li>
+		<li><i>samosa</i></li>
+		<li><i>chole-bhathure</i></li>
+		<li><i>litti-chokha</i></li>
+		<li><i>puri sabzi</i></li>
+		<li><i>rice curry</i></li>
 
 		
 	</ul>
